--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ backend/dataModels/models/heart.pkl
 backend/dataModels/models/reclutamiento.pkl
 backend/dataModels/models/stroke.pkl
 backend/dataModels/models/wine.pkl
+backend/dataModels/__pycache__/
