--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "@types/react-speech-recognition": "^3.9.5",
     "axios": "^1.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
